css/parser/tests/errors/rome/invalid/keyfram-number/output.stderr
error: Expected "%"
 --> $DIR/tests/errors/rome/invalid/keyfram-number/input.css:2:4
  |
2 |     10 {
  |       ^

